# hm_inference_example

./: Makefile  README.md  dune-project  flake.nix  hm_inference_example.js  hm_inference_example.opam  index.html  small_functional_language.opam
.github/workflows/: dune.yml  static.yml
lib/: ast.ml  compiler.ml  dune  eval.ml  lexer.mll  parser.mly  test.ml  type_check.ml  vm.ml
test/: dune
